<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewVersionDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/VERSION_DATE"
            android:textAlignment="center"
            android:translationY="5dp" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onStartClick"
            android:text="@string/START" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/MODEL"
                    android:textAlignment="center"
                    android:translationX="10dp" />

                <Spinner
                    android:id="@+id/spinner_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/tfe_ic_models"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewDevice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/DEVICE"
                    android:textAlignment="center"
                    android:translationX="10dp" />

                <Spinner
                    android:id="@+id/spinner_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/tfe_ic_devices"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewThreads"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/THREADS"
                    android:textAlignment="center"
                    android:translationX="10dp" />

                <Spinner
                    android:id="@+id/spinner_threads"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/tfe_ic_threads"
                    android:textAlignment="center" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.wear.widget.BoxInsetLayout>